--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="author-bio">
                     <h3>Mungati enock</h3>
-                    <p>Mungati enock is an award-winning author of mystery and historical fiction. With over a decade of writing experience, her novels have been translated into 15 languages and have sold more than 2 million copies worldwide.</p>
+                    <p>Mungati enock is an author of mystery and historical fiction. With over a decade of writing experience, her novels have been translated into 15 languages and have sold more than 2 million copies worldwide.</p>
                     <p>His latest novel, <em>The Silent Witness</em>, spent 12 weeks on the New York Times Bestseller list and won the 2023 National Book Award for Fiction. Mungati's writing is known for its intricate plots, rich historical detail, and compelling characters.</p>
                     <p>When he's not writing, Mungati leads writing workshops, speaks at literary festivals, and volunteers with literacy programs. He lives in the Kampala with his wife and house.</p>
                     <a href="#contact" class="btn">Book for Speaking</a>
