Update hero section heading from 'new feature' to 'newer feature'

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
-            <h1 id="app">new feature</h1>
+            <h1 id="app">newer feature</h1>
             <p>Discover the bestselling novels from award-winning author Mungati enock. Journey through suspenseful thrillers and captivating historical fiction that keep readers turning pages late into the night.</p>
             <div class="hero-btns">
                 <a href="#books" class="btn">Browse Books</a>
